# MyFridger-BE

./: .gitignore  README.md  alembic.ini  cdk.json  pyproject.toml  pytest.ini
app/: main.py
app/api/: api.py  materials.py  recipes.py  recommends.py
app/core/: auth.py  config.py  db.py
app/models/: __init__.py  common.py  materials.py  recipes.py  recommendations.py  user.py
app/services/: __init__.py  expiry_estimation_service.py  materials.py  recipe_recommendation_service.py  recipe_sync_service.py
app/utils/: bedrock_dependencies.py  s3_helper.py
infra/: app.py  cdk.json  utils.py
infra/lambda/: receipt.py
infra/stacks/: README.md  __init__.py  alerts_stack.py  backend.py  common_stack.py  materials_stack.py  receipt.py  recipe_stack.py  users_stack.py
lambda/: recipe_manual_sync_handler.py  recipe_sync_handler.py  requirements.txt
migrations/: env.py
migrations/versions/: 526198c2ee75_fix_remove_user_id_dependency.py  a2e0c001ea4d_feat_add_user_id.py
models/: __init__.py
tests/integration/: test_expiry_estimation.py  test_materials.py  test_recipe_recommendations.py  test_recipes.py
tests/unit/: test_expiry_estimation.py  test_materials.py  test_materials_service.py  test_recipe_recommendation.py  test_recipe_sync.py  test_s3_helper.py
