[project]
name = "myfridger-be"
version = "0.1.0"
description = "Cloud Project Group G - Backend for MyFridger Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.2",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
