[project]
name = "myfridger-be"
version = "0.1.0"
description = "Cloud Project Group G - Backend for MyFridger Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "aws-cdk-lib>=2.227.0",
    "constructs>=10.4.3",
    "fastapi[standard]>=0.121.2",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
